# git-init-gforge

./: .gitignore  Makefile.am  configure.ac  git-init-gforge
forges/: Makefile.am  imag.sh  inria.sh
scripts/: Makefile.am  git-init-gforge.in
share/git-init-gforge/forges/: alioth.sh  imag.sh  lig.sh
