#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([Git Init GForge], [1.0], [Vincent.Danjean@ens-lyon.org])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_SRCDIR([scripts/git-init-gforge.in])

AM_INIT_AUTOMAKE([-Wall -Werror foreign dist-xz tar-pax])

# Checks for programs.
AC_PROG_INSTALL

AC_CONFIG_FILES([Makefile
                 forges/Makefile
                 scripts/Makefile])
AC_OUTPUT
