
bin_SCRIPTS=git-init-gforge

EXTRA_DIST=git-init-gforge.in
CLEANFILES=git-init-gforge

edit = sed \
	-e 's|@bindir[@]|$(bindir)|g' \
	-e 's|@pkgdatadir[@]|$(pkgdatadir)|g' \
	-e 's|@prefix[@]|$(prefix)|g'
     
git-init-gforge: Makefile
	rm -f $@ $@.tmp
	srcdir=''; \
	  test -f ./$@.in || srcdir=$(srcdir)/; \
	  $(edit) $${srcdir}$@.in >$@.tmp
	chmod +x $@.tmp
	chmod a-w $@.tmp
	mv $@.tmp $@

git-init-gforge: $(srcdir)/git-init-gforge.in

